// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`like POST /comment 1`] = `
{
  "data": {
    "commentId": "620c79b7-3927-48b7-a308-1ffd3db6036f",
    "liked": true,
  },
  "ok": true,
}
`;

exports[`like POST /comment 2`] = `
{
  "data": {
    "commentId": "620c79b7-3927-48b7-a308-1ffd3db6036f",
    "liked": false,
  },
  "ok": true,
}
`;

exports[`like POST /comment 3`] = `
{
  "payload": {
    "id": "620c79b7-3927-48b7-a308-1ffd3db6036f",
    "liker": {
      "firstName": "Test",
      "id": "ed1a3fd0-4d0b-4961-b4cd-cf212357740d",
      "lastName": "Tester",
      "lastOnlineAt": "2024-08-10T10:10:10Z",
      "nick": "test_tester",
      "online": true,
    },
    "message": "comment message",
  },
  "type": "comment_liked",
}
`;

exports[`like POST /post 1`] = `
{
  "data": {
    "liked": true,
    "postId": "c7b7bf17-38f9-4ed5-b0a8-501a90f7c829",
  },
  "ok": true,
}
`;

exports[`like POST /post 2`] = `
{
  "data": {
    "liked": false,
    "postId": "c7b7bf17-38f9-4ed5-b0a8-501a90f7c829",
  },
  "ok": true,
}
`;

exports[`like POST /post 3`] = `
{
  "payload": {
    "id": "c7b7bf17-38f9-4ed5-b0a8-501a90f7c829",
    "liker": {
      "firstName": "Test",
      "id": "ed1a3fd0-4d0b-4961-b4cd-cf212357740d",
      "lastName": "Tester",
      "lastOnlineAt": "2024-08-10T10:10:10Z",
      "nick": "test_tester",
      "online": true,
    },
    "message": "post message 3",
  },
  "type": "post_liked",
}
`;
